--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "prisma": "^5.2.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
