--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "moment": "^2.29.4"
+    "express-validator": "^7.0.1"
   }
 }
